# ITAM.Literature

./: .dockerignore  .env  Dockerfile  db.sql  docker-compose.yaml  requirements.txt
app/: .env  app.py  config.py  db.py  db.sql  models.py  pyproject.toml  requirements.txt  templates.py
app/handlers/: message_handlers.py
app/keyboards/: inline_keyboards.py
app/models/: db_models.py  models.py
app/templates/: category_vote_description.j2  help.j2  now.j2  start.j2  vote_cant_vote.j2  vote_incorrect_categories.j2
app/utils/: schulze.py  utilities.py
itamliterature/: .gitignore  __main__.py  config.py  db.py  db.sql  pyproject.toml  requirements.txt  templates.py
itamliterature/keyboards/: inline_keyboards.py  keyboards.py
itamliterature/models/: db_models.py  models.py  states.py
itamliterature/templates/: add_admin.j2  add_book.j2  add_category.j2  admin.j2  book_vote_results.j2  categories.j2  categories_with_books.j2  category_vote_description.j2  category_with_books.j2  start_voting_enter_dates.j2  vote_description.j2  vote_incorrect.j2  vote_incorrect_input.j2  vote_results.j2  vote_success.j2
itamliterature/utils/: utilities.py
